[tool.poetry]
name = "cushing-flickr"
version = "0.1.0"
description = "Code to Gather Data from Abandoned Cushing Flickr Account"
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flickrapi = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
